[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-execution-gate"
version = "0.1.0"
description = "CODEX public-safe execution-time governance harness (Proprietary / All Rights Reserved)."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools]
packages = ["codex_gate"]
